# llvm_project_typedowncaster

TypeDowncaster/: CMakeLists.txt  Documentation.md  README.md  technical_report.tex
TypeDowncaster/lib/: CMakeLists.txt  TypeDowncaster.cpp
